[BE] refactor: 북마크 validator 추가, 테스트 업데이트 등 (#38)
- 북마크 파라미터 수동 체크하던 것 validator로 변경
- 테스트코드 업데이트
- swagger 업데이트
- 기타 변수 명, 모델 잘못 쓴 것 수정
